# ceg

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
scripts/: doctest.cmd  installs.cmd
scripts/algos/: bm_history_0df64.py  bm_last_before.py  bm_last_n_before.py
src/ceg/: Array.py  Node.py  Ref.py  Series.py  __init__.py  graphs.py  immut.py  types.py
src/ceg/Plugin/: __init__.py  streamlit.py
src/ceg/Scope/: __init__.py
src/ceg/Sync/: Loop.py  Wait.py  __init__.py
src/ceg/apis/: __init__.py  __main__.py  bars.py  sql.py
src/ceg/apis/frd/: __init__.py  data.py  db.py  raw.py
src/ceg/apis/ib/: __init__.py  _archive.py  api.py  client.py  contracts.py  db.py  fundamentals.py  historic.py  sql.py  utils.py
src/ceg/apis/utils/: s3.py
src/ceg/app/: __init__.py  examples.py  model.py  nav.py  page.py  plots.py  rand.py  run.py
src/ceg/app/academic/: inventory.py
src/ceg/app/deprecated/: rand.py
src/ceg/app/examples/: __init__.py  bars.py  minmax.py  vol.py
src/ceg/app/markets/: bars.py  (+1 more)
src/ceg/core/: Array.py  Node.py  Ref.py  Series.py  __init__.py  algos.py  graphs.py  guards.py  histories.py  immut.py  intro.py  nodes.py  refs.py  steps.py  types.py
src/ceg/data/: __init__.py  bars.py
src/ceg/fs/: __init__.py  agg.py  align.py  arrays.py  bars.py  binary.py  consts.py  dates.py  discret.py  factors.py  mm.py  norm.py  pca.py  rand.py  risk.py  rolling.py  shapes.py  stats.py  unary.py  xo.py
src/ceg/io/: __init__.py
src/ceg/num/: __init__.py  gp.py  pca.py  pca_reg.py
(+33 files in other folders)
