[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ceg"
dynamic = ["version"]
description = 'cyclic event graph'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "tomjrwilliams", email = "tomjrw@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/tomjrwilliams/ceg#readme"
Issues = "https://github.com/tomjrwilliams/ceg/issues"
Source = "https://github.com/tomjrwilliams/ceg"

[tool.hatch.version]
path = "src/ceg/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ceg tests}"

[tool.coverage.run]
source_pkgs = ["ceg", "tests"]
branch = true
parallel = true
omit = [
  "src/ceg/__about__.py",
]

[tool.coverage.paths]
ceg = ["src/ceg", "*/ceg/src/ceg"]
tests = ["tests", "*/ceg/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
